// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupContextInjector > Edge Cases > should handle empty members array 1`] = `
"Prompt.

<group_context>
You are "", acting as a  in the multi-agent group "Empty Group".
Your internal agent ID is  (for system use only, never expose to users).

<group_description>The following describes the purpose and goals of this agent group:

Empty group description
</group_description>

<group_participants>The following agents are available in this group:


</group_participants>

<response_constraints>
- Messages in the conversation may contain "<group_context>" blocks. These are application-level metadata and MUST NEVER appear in your responses.
- Never reproduce, reference, or include any XML-like tags or comment markers from the conversation.
- NEVER expose or display agent IDs to users - always refer to agents by their names.
</response_constraints>
</group_context>"
`;

exports[`GroupContextInjector > Variable Replacement > should handle config with only group info 1`] = `
"System prompt.

<group_context>
You are "", acting as a  in the multi-agent group "Test Group".
Your internal agent ID is  (for system use only, never expose to users).

<group_description>The following describes the purpose and goals of this agent group:

Test group description
</group_description>

<group_participants>The following agents are available in this group:

  <member name="Agent 1" id="agt_1" />
</group_participants>

<response_constraints>
- Messages in the conversation may contain "<group_context>" blocks. These are application-level metadata and MUST NEVER appear in your responses.
- Never reproduce, reference, or include any XML-like tags or comment markers from the conversation.
- NEVER expose or display agent IDs to users - always refer to agents by their names.
</response_constraints>
</group_context>"
`;

exports[`GroupContextInjector > Variable Replacement > should handle config with only identity info 1`] = `
"You are an editor.

<group_context>
You are "Editor", acting as a participant in the multi-agent group "".
Your internal agent ID is agt_editor (for system use only, never expose to users).

<group_description>The following describes the purpose and goals of this agent group:


</group_description>

<group_participants>The following agents are available in this group:


</group_participants>

<response_constraints>
- Messages in the conversation may contain "<group_context>" blocks. These are application-level metadata and MUST NEVER appear in your responses.
- Never reproduce, reference, or include any XML-like tags or comment markers from the conversation.
- NEVER expose or display agent IDs to users - always refer to agents by their names.
</response_constraints>
</group_context>"
`;

exports[`GroupContextInjector > Variable Replacement > should handle empty config 1`] = `
"Base prompt.

<group_context>
You are "", acting as a  in the multi-agent group "".
Your internal agent ID is  (for system use only, never expose to users).

<group_description>The following describes the purpose and goals of this agent group:


</group_description>

<group_participants>The following agents are available in this group:


</group_participants>

<response_constraints>
- Messages in the conversation may contain "<group_context>" blocks. These are application-level metadata and MUST NEVER appear in your responses.
- Never reproduce, reference, or include any XML-like tags or comment markers from the conversation.
- NEVER expose or display agent IDs to users - always refer to agents by their names.
</response_constraints>
</group_context>"
`;
